# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16OuX47QhcYGbCCb0opsMVdarxhgFIAXU0qKImodEOMGI=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xnCH-s_vCVrkI-ACNS44dMOLKEWqFrq9BzU4oBFv0QE8=',
      'err': 0,
    }),
  ])
# ---
